<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/fragment_signup_fields_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_signup_fields_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/fragment_signup_first_name_input"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fragment_signup_first_name_validation"
            style="@style/ValidationTextView"
            android:text="@string/first_name_validation"
            app:layout_constraintStart_toStartOf="@id/fragment_signup_first_name_input"
            app:layout_constraintTop_toBottomOf="@id/fragment_signup_first_name_input" />

        <EditText
            android:id="@+id/fragment_signup_last_name_input"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_signup_first_name_input" />

        <TextView
            android:id="@+id/fragment_signup_last_name_validation"
            style="@style/ValidationTextView"
            android:text="@string/last_name_validation"
            app:layout_constraintStart_toStartOf="@id/fragment_signup_last_name_input"
            app:layout_constraintTop_toBottomOf="@id/fragment_signup_last_name_input" />

        <EditText
            android:id="@+id/fragment_signup_email_input"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_signup_last_name_input" />

        <TextView
            android:id="@+id/fragment_email_validation"
            style="@style/ValidationTextView"
            android:text="@string/email_validation"
            app:layout_constraintStart_toStartOf="@id/fragment_signup_email_input"
            app:layout_constraintTop_toBottomOf="@id/fragment_signup_email_input" />


        <EditText
            android:id="@+id/fragment_signup_password_input"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_signup_email_input" />

        <TextView
            android:id="@+id/fragment_password_validation"
            style="@style/ValidationTextView"
            android:text="@string/password_validation"
            app:layout_constraintStart_toStartOf="@id/fragment_signup_password_input"
            app:layout_constraintTop_toBottomOf="@id/fragment_signup_password_input" />

        <EditText
            android:id="@+id/fragment_signup_confirm_password_input"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_signup_password_input" />

        <TextView
            android:id="@+id/fragment_confirm_password_validation"
            style="@style/ValidationTextView"
            android:text="@string/confirm_password_validation"
            app:layout_constraintStart_toStartOf="@id/fragment_signup_confirm_password_input"
            app:layout_constraintTop_toBottomOf="@id/fragment_signup_confirm_password_input" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/fragment_signup_sign_up_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_signup_fields_layout" />

    <Button
        android:id="@+id/fragment_signup_back_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>