<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DashboardFragment">

    <TextView
        android:id="@+id/fragment_dashboard_welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fragment_dashboard_add_friend_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:text="@string/dashboard_add_friend_title"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/fragment_dashboard_friend_input"
        app:layout_constraintTop_toBottomOf="@id/fragment_dashboard_welcome_text" />

    <EditText
        android:id="@+id/fragment_dashboard_friend_input"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/dashboard_add_friend_hint"
        app:layout_constraintEnd_toStartOf="@id/fragment_dashboard_add_friend_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_dashboard_add_friend_title" />

    <Button
        android:id="@+id/fragment_dashboard_add_friend_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/dashboard_add_friend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/fragment_dashboard_friend_input" />

    <TextView
        android:id="@+id/fragment_dashboard_friend_validation"
        style="@style/ValidationTextView"
        android:text="@string/email_validation"
        app:layout_constraintStart_toStartOf="@id/fragment_dashboard_friend_input"
        app:layout_constraintTop_toBottomOf="@id/fragment_dashboard_friend_input" />

</androidx.constraintlayout.widget.ConstraintLayout>